Update gitignore and remove VS temp files

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,27 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# =======================================================
+# PHẦN BỔ SUNG CHO VISUAL STUDIO (BẮT BUỘC PHẢI CÓ)
+# =======================================================
+
+# Visual Studio cache/options directory
+.vs/
+
+# Visual Studio Code
+.vscode/
+
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# User-specific files (MonoDevelop/Xamarin Studio)
+*.userprefs
+
+# Error logs
+*.log
+*.dump
