feat: implement authentication with JWT, including login and registration functionality

--- a/ChatBotSystem/appsettings.json
+++ b/ChatBotSystem/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ChatbotLMS;Username=postgres;Password=123456"
+  },
+  "JwtSettings": {
+    "SecretKey": "SuperSecretKeyLongEnough_MustBeAtLeast32BytesLength",
+    "Issuer": "ChatBotSystem",
+    "Audience": "ChatBotClient",
+    "ExpiryMinutes": 30
   }
 
 
