feat: implement CRUD operations for courses, including detailed course retrieval and deletion functionality

--- a/ChatBotSystem/ChatBotSystem.csproj
+++ b/ChatBotSystem/ChatBotSystem.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
     <UserSecretsId>d22019f8-cbbf-4400-863e-5008c992c2a3</UserSecretsId>
   </PropertyGroup>
 
