--- a/ChatBotSystem/appsettings.json
+++ b/ChatBotSystem/appsettings.json
@@ -14,6 +14,10 @@
     "Issuer": "ChatBotSystem",
     "Audience": "ChatBotClient",
     "ExpiryMinutes": 30
+  },
+  "AiSettings":{
+    "OpenAiApiKey": " ",
+    "ModelName": "gpt-4o-mini"
   }
 
 
